<resources>
    <string name="app_name">Playlist Maker Homework1</string>
    <string name="Main_Title">Playlist maker</string>
    <string name="Search">Поиск</string>
    <string name="Medioteka">Медиотека</string>
    <string name="Settings">Настройки</string>
    <string name="User_Enter">Пользовательское соглашение</string>
    <string name="User_Support">Написать в поддержку</string>
    <string name="User_Share">Поделиться приложением</string>
    <string name="User_Black_Theme">Темная тема</string>
</resources>