<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
   style="@style/SettingsBackround">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/Top_Padding"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/Main_text_marginTop"
        >
        <Button
            style ="@style/IconTintColor"
            android:background="?android:attr/selectableItemBackground"
            android:id= "@+id/backSettings"
            android:layout_marginStart="@dimen/Corner_Radius"
            android:gravity="center_horizontal"
            android:layout_width="26dp"
            android:layout_height="26dp"

            app:icon="@drawable/vectormainsettings"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/Icon_Padding"
           />
        <TextView
            style="@style/TextViewStyle"
            android:drawablePadding="@dimen/drawable_padding"
            android:layout_marginStart="@dimen/text_margin_start"
            android:layout_marginTop="@dimen/Main_text_marginTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Settings"
            android:layout_gravity="start"

            android:textSize="@dimen/Text_size" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/Main_layout_marginTop"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/Corner_Radius"

        >

        <Switch
            android:layout_marginEnd="10dp"
            android:paddingEnd="-3dp"

            android:id="@+id/switch6"
            style="@style/TextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/Settings_Padding"
            android:layout_weight="1"


            android:text="@string/User_Black_Theme"
            android:textSize="@dimen/Text_size_settings"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:layout_marginEnd="14dp"
            android:paddingEnd="2dp"
            style="@style/TextViewStyleAndIcon"
            android:drawableEnd="@drawable/vectorsetting1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/Settings_Padding"
            android:layout_weight="1"

            android:text="@string/User_Share"
            android:gravity="center_vertical"

            android:textSize="@dimen/Text_size_settings"
            />

        <TextView
            android:layout_marginEnd="14dp"
            style="@style/TextViewStyleAndIcon"
            android:drawableEnd="@drawable/groupsettin2"

            android:layout_width="match_parent"
            android:layout_height="@dimen/Settings_Padding"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text=   "@string/User_Support"

            android:textSize="@dimen/Text_size_settings"
            />
        <TextView
            android:layout_marginEnd="14dp"
            android:paddingEnd="6dp"
            style="@style/TextViewStyleAndIcon"
            android:drawableEnd="@drawable/vectorsetting3"

            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="@dimen/Settings_Padding"
            android:layout_weight="1"

            android:text="@string/User_Enter"

            android:textSize="@dimen/Text_size_settings"/>
        <FrameLayout
            android:layout_marginEnd="14dp"
            android:layout_width="match_parent"
            android:layout_weight="50"
            android:layout_height="@dimen/empty_layout_height"/>
    </LinearLayout>

</LinearLayout>