<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/Background_Blue"
   >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/Top_Padding">

        <TextView
            android:layout_marginStart="@dimen/Corner_Radius"
            android:layout_marginTop="@dimen/Main_text_marginTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Main_Title"
            android:layout_gravity="start"
            android:textColor="@color/white"
            android:textSize="@dimen/Text_size" />
    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/Main_layout_marginTop"
        android:layout_marginHorizontal="@dimen/Corner_Radius"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonMain1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/Buttons_height"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/Search"
            android:textColor="@color/Text_Black"
            android:textSize="@dimen/Text_size"
            app:cornerRadius="@dimen/Corner_Radius"
            app:icon="@drawable/vector"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/Icon_Padding"
            app:iconTint="@color/Text_Black" />

        <Button
            android:id="@+id/buttonMain2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/Buttons_height"
            android:layout_marginTop="@dimen/Corner_Radius"
            app:icon="@drawable/vector2"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/Icon_Padding"
            app:iconTint="@color/Text_Black"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/Medioteka"
            android:textColor="@color/Text_Black"
            android:textSize="@dimen/Text_size"
            app:cornerRadius="@dimen/Corner_Radius"
            tools:ignore="DuplicateIds" />

        <Button
            android:id="@+id/buttonMain3"
            app:icon="@drawable/light_mode3"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/Icon_Padding"
            app:iconTint="@color/Text_Black"
            android:layout_width="match_parent"
            android:layout_height="@dimen/Buttons_height"
            android:layout_marginTop="@dimen/Corner_Radius"
            android:layout_marginBottom="@dimen/Main_layout_marginBottom"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/Settings"
            android:textColor="@color/Text_Black"
            android:textSize="@dimen/Text_size"
            app:cornerRadius="@dimen/Corner_Radius"
            tools:ignore="DuplicateIds" />
    </LinearLayout>
</LinearLayout>